--- a/stylesmain.css
+++ b/stylesmain.css
@@ -66,3 +66,31 @@ body {
     border: none;
     cursor: pointer;
 }
+
+.offer-item {
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin: 10px;
+    width: 200px;
+    float: left;
+}
+
+
+
+
+
+/* Ваш CSS-код в stylesmain.css */
+.notification {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 15px;
+    border-radius: 5px;
+  }
+  
+  .hide {
+    display: none;
+  }
+  
