--- a/stylesmain.css
+++ b/stylesmain.css
@@ -136,21 +136,19 @@ body {
 
 #Tab4 {
     padding: 20px;
+    flex-wrap: wrap;
 }
 
 #personnelList {
     list-style-type: none;
     padding: 0;
     display: flex;
-    flex-wrap: wrap;
 }
 
 .person-item {
     border: 1px solid #ddd;
     padding: 10px;
     margin: 10px;
-    width: 200px;
-    flex: 0 0 calc(33.33% - 20px); /* Три колонки на экране */
 }
 
 
@@ -185,23 +183,6 @@ body {
     border-radius: 5px;
 }
 
-.person-item {
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    cursor: move;
-}
-
-/* Стили для зоны перетаскивания */
-#dropZone {
-    width: 100%;
-    padding: 20px;
-    border: 2px dashed #aaa;
-    border-radius: 5px;
-    margin-top: 20px;
-    text-align: center;
-}
 
 /* Стили для кнопки подтверждения */
 #confirmButton {
@@ -241,4 +222,42 @@ body {
     background-color: #3498db; /* Цвет выделения (замените на ваш цвет) */
     color: #fff; /* Цвет текста внутри выделенного блока (замените на ваш цвет) */
     border: 2px solid #2980b9; /* Обводка выделенного блока (замените на ваш цвет и стиль) */
+}
+
+#Tab6 {
+    padding: 20px;
+
+}
+
+#acceptedOffersContainer {
+    margin-top: 20px;
+    display: flex;
+    gap: 20px;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+/* Стили для каждого подтвержденного соответствия */
+.match-item {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 15px;
+}
+
+/* Стили для информации о вакансии */
+.vacancy-info {
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+
+/* Стили для информации о сотрудниках */
+.employees-info {
+    margin-top: 10px;
+}
+
+.employee-info{
+    border: 1px solid #ccc;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
