--- a/stylesmain.css
+++ b/stylesmain.css
@@ -48,7 +48,7 @@ body {
     position: fixed;
     bottom: 10px;
     right: 10px;
-    background-color: #4CAF50;
+    background-color: #87ceeb;
     color: white;
     padding: 15px;
     border-radius: 5px;
@@ -109,7 +109,7 @@ body {
     }
 
     button[type="submit"] {
-        background-color: #4CAF50;
+        background-color: #87ceeb;
         color: white;
         border: none;
         border-radius: 4px;
@@ -119,7 +119,7 @@ body {
     }
 
     button[type="submit"]:hover {
-        background-color: #45a049;
+        background-color: #4682B4;
     }
 
 }
@@ -171,6 +171,15 @@ body {
 
     .delete-button:hover {
         background-color: darkred;
+    }
+
+    .zoomable-image {
+        cursor: pointer;
+        transition: transform 0.3s ease;
+    }
+    
+    .zoomable-image.zoomed {
+        transform: scale(1.5); /* Збільшення розміру зображення */
     }
 }
 
@@ -231,7 +240,7 @@ body {
 
     button[type="button"],
     button[type="submit"] {
-        background-color: #4CAF50;
+        background-color: #87ceeb;
         color: white;
         border: none;
         border-radius: 4px;
@@ -242,7 +251,7 @@ body {
 
     button[type="button"]:hover,
     button[type="submit"]:hover {
-        background-color: #45a049;
+        background-color: #4682B4;
     }
 
 }
@@ -441,8 +450,10 @@ body {
 
     .offer-item > p {
             padding-bottom: 10px; /* збільшено відступи */
+            padding-top: 10px;
             margin-bottom: 10px; /* збільшено відступи */
-            font-weight: bold;
+            border-top: 2px solid #2A3237;
+            border-bottom: 2px solid #2A3237;
     }
 
     .device-item {
@@ -493,4 +504,13 @@ body {
     button:hover {
         background-color: darkred;
     }
+}
+
+.zoomable-image {
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.zoomable-image.zoomed {
+    transform: scale(2); /* Збільшення розміру зображення */
 }
